# demo-inno26Q2-sentinel-opencloud-integration

./: .gitignore  README.md
docs/: Tutorial.md
infra/apps/: README.md  apps.tf  provider.tf  state.tf  terraform.tfvars.example  variables.tf  zitadel.tf
infra/bootstrap/: README.md  output.tf  provider.tf
infra/foundation/: README.md  database.tf  k8s-components.tf  k8s.tf  provider.tf  s3.tf  state.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
modules/airflow/: README.md  main.tf
modules/lakekeeper/: README.md  main.tf
modules/opa/: Dockerfile  README.md  inititialize-trino-user.sh  main.tf  provider.tf  variables.tf
policies/: data.json  test.rego
portal/: README.md  dump_fake_portal.py  dump_portal.py  machine_users_credentials.json  main.tf  new_world.json  portal_faker.py  pyproject.toml  test.md
s3-benchmark/: Dockerfile  Makefile  docker-compose.yml  k8s-job-with-sentinel.yaml  k8s-job-without-sentinel.yaml  k8s-job.yaml  main.py  pyproject.toml  world.json
s3-benchmark/benchmark/: __main__.py  config.py  deleter.py  metrics.py  reader.py  runner.py  writer.py
s3-benchmark/canal/: __init__.py  _core.py  _version.py  flow.py  sink.py  source.py
s3-benchmark/canal/libs/: forking_pickler_dill.py  types.py
s3-benchmark/canal/stream_operators/: grouped_within.py
s3-benchmark/tests/: conftest.py  test_reader.py  test_writer.py
scripts/: publish-opa-policies.sh
spark-benchmark/: Dockerfile  README.md
usecase/: .dockerignore  Dockerfile  README.md  ingest.py  requirements.txt  upcloud_fileio.py  upload.sh
(+48 files in other folders)
