[project]
name = "s3-benchmark"
version = "0.1.0"
description = "S3 read/write benchmark using parallel workers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "psutil>=5.9",
    "dill>=0.3",
]

[project.scripts]
s3-benchmark = "benchmark.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canal", "benchmark"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
